greeting-service/.nodeshift/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nodejs-istio-circuit-breaker-gateway
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  rules:
  - http:
      paths:
      - path: /.*
        backend:
          serviceName: nodejs-istio-circuit-breaker-greeting
          servicePort: 8080
      - path: /api/greeting
        backend:
          serviceName: nodejs-istio-circuit-breaker-greeting
          servicePort: 8080
